{
    "version": 1,
    "name": "PlatformActions",
    "maps": [
        {
            "name": "Player",
            "id": "a9d549d4-ec9b-49b1-9c8c-082d4b1cbfb7",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "e32d2a16-addc-48ac-ab64-dd7dccbea9d9",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Punch",
                    "type": "Button",
                    "id": "2e5226e7-f910-4035-9844-bb7ab6f795e5",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LongPunch",
                    "type": "Button",
                    "id": "5304516c-514e-4a2c-b2e1-df90e9cf7aad",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "90c5db58-828d-4f55-a40a-a1fd01393fa2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CrouchDash",
                    "type": "Button",
                    "id": "989fa705-893c-4c01-ac03-10558aa52b38",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownAttack",
                    "type": "Button",
                    "id": "61263720-b4cc-4190-9d32-5f79b1e930a4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "b50bdfbc-a90a-4886-a0de-8cd2f806328c",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "ec199fea-00e7-4cae-9273-cf8c470b1adc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "307b63fa-1650-4435-a3cd-650cb5cff7a0",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "8e55e0a5-9fdd-42eb-9257-1a8ebe0ec19c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "ac89157b-dd9e-45c2-b686-4bc203cacab5",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f5ee2e9d-d2e9-43e2-864c-19082facd994",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Punch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23fd2fd1-2a1f-49e1-b18c-3cbda3f7a32e",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LongPunch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eea3c284-df5d-4ca3-8db1-48471aae70d1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b31f3287-6b8f-4b24-a4b4-50c6b8da3c68",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CrouchDash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9daef66d-3d67-437a-95bf-2135ead36f2c",
                    "path": "<Keyboard>/p",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Cartel",
            "id": "1622ce28-170f-4705-85cd-4424d7f03748",
            "actions": [
                {
                    "name": "Leer",
                    "type": "Button",
                    "id": "96f68f73-5ae5-468f-9d73-82cff85d0182",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c0a006e-5560-4a21-a85a-b1810768d179",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Leer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Generales",
            "id": "3d5967ad-7c51-41b5-9ed7-304194efac4d",
            "actions": [
                {
                    "name": "Salir",
                    "type": "Button",
                    "id": "0cf827d8-cd74-4d17-af8b-d90727fe9357",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pausa",
                    "type": "Button",
                    "id": "ef8a015f-6995-4559-9470-fedad282c443",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "095b20d4-4343-4f40-abc1-86b6436b5f99",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Salir",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23be8016-d134-48fe-85ab-8be6276c7fa8",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pausa",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}